--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,8 @@ plugins:
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/weditor/weditor.github.io.git
+  branch: master
 
 
