--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -434,7 +434,7 @@ codeblock:
     # Show text copy result.
     show_result: true
     # Available values: default | flat | mac
-    style: mac
+    style: default
 
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
